fix alignments and format

--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@ ul {
 .top-nav__list {
   max-width: 1040px;
   margin: 0 auto;
-  display: inline-block;
+
   overflow: auto;
 }
 
@@ -54,7 +54,12 @@ ul {
   max-width: 1040px
   margin: auto
 }
-
+h2 {
+  text-align: center;
+}
+p {
+  text-align: center;
+}
 .student-info {
   padding: 2rem;
   max-width: 1040px;
